--- a/app/src/main/res/layout/activity_face.xml
+++ b/app/src/main/res/layout/activity_face.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_white"
+    android:background="@color/white"
     android:visibility="visible"
     tools:context=".Face">
 
@@ -13,8 +13,8 @@
         android:layout_width="316dp"
         android:layout_height="371dp"
         android:layout_marginTop="68dp"
-        android:background="@drawable/frame"
         android:autofillHints="사진을 찍어주세요"
+        android:background="@drawable/frame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,42 +43,31 @@
         app:layout_constraintTop_toBottomOf="@+id/image" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-148dp">
+        android:id="@+id/constraintLayout3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-
-        <EditText
-            android:id="@+id/edit_name"
-            android:layout_width="269dp"
-            android:layout_height="44dp"
-            android:layout_marginBottom="140dp"
-            android:backgroundTint="#74ebd5"
-            android:ems="10"
-            android:fontFamily="@font/dream6"
-            android:hint="등록할 사용자 이름을 적어주세요"
-            android:inputType="textPersonName"
-            android:textColor="#74ebd5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.788"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/bt_upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="#74ebd5"
+            android:layout_marginStart="50dp"
+            android:layout_marginBottom="32dp"
+            android:backgroundTint="@color/white"
             android:fontFamily="@font/dream6"
-            android:text="Upload"
-            android:textColor="@color/white"
+            android:stateListAnimator="@null"
+            android:text="확인"
+            android:textColor="#676767"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_name"
-            app:layout_constraintVertical_bias="0.707" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/bt_choose"
@@ -92,24 +81,46 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.367"
-            app:layout_constraintStart_toEndOf="@+id/bt_upload"
-            app:layout_constraintTop_toBottomOf="@+id/edit_name"
-            app:layout_constraintVertical_bias="0.937" />
+            app:layout_constraintStart_toEndOf="@+id/bt_upload" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="55dp"
             android:layout_height="36dp"
-            android:layout_marginBottom="140dp"
+            android:layout_marginTop="580dp"
             android:fontFamily="@font/dream6"
             android:text="이름"
             android:textAlignment="center"
             android:textColor="#74ebd5"
             android:textSize="23dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="140dp"
+            android:ems="10"
+            android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/edit_name"
-            app:layout_constraintHorizontal_bias="0.877"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView4" />
+
+        <Button
+            android:id="@+id/bt_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="32dp"
+            android:backgroundTint="@color/white"
+            android:fontFamily="@font/dream6"
+            android:stateListAnimator="@null"
+            android:text="취소"
+            android:textColor="#676767"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
