--- a/app/src/main/res/layout/fragment_cctv.xml
+++ b/app/src/main/res/layout/fragment_cctv.xml
@@ -16,24 +16,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/refreshButton3"
-                android:layout_width="40dp"
-                android:layout_height="30dp"
-                android:layout_gravity="right"
-                android:layout_marginLeft="2dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginRight="10dp"
-                android:background="#00FFFFFF"
-                android:scaleType="fitCenter"
-                android:src="@drawable/refresh_button" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dream4"
+                    android:text="출입 기록"
+                    android:textSize="25dp" />
+
+                <ImageButton
+                    android:id="@+id/refreshButton3"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="right"
+                    android:background="#00FFFFFF"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/refresh_button" />
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
 
 
         </LinearLayout>
