--- a/app/src/main/res/layout/fragment_face_recognition.xml
+++ b/app/src/main/res/layout/fragment_face_recognition.xml
@@ -18,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:orientation="vertical">
 
             <TextView
@@ -33,8 +34,8 @@
                 android:id="@+id/btn"
                 android:layout_width="139dp"
                 android:layout_height="137dp"
-                android:layout_marginBottom="100dp"
-                android:background="@mipmap/add"
+                android:layout_marginBottom="70dp"
+                android:background="@mipmap/add_user"
                 android:fontFamily="@font/dream6"
                 android:text="사용자 등록하기"
                 android:textColor="@color/white" />
@@ -42,6 +43,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:orientation="horizontal">
 
                 <TextView
